# bevy_shatter

./: Cargo.toml  README.md  TODO.md
examples/: README.md
examples/baked/: main.rs  menu.rs
examples/character/: character.rs  main.rs  menu.rs
examples/click/: main.rs  menu.rs
examples/example/: character.rs  main.rs  menu.rs
src/: autoglass.rs  lib.rs  plugin.rs
