[package]
name = "bevy_shatter"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Ivan Ribeiro ivan.ribeiro09s@gmail.com"]
repository = "https://github.com/ivsop/bevy_shatter"
categories = ["game-development"]
keywords = ["bevy", "gamedev", "glass", "shatter"]
description = "A bevy plugin to allow simulating shattered glass"
readme = "README.md"

[dependencies]
avian3d = "0.3.1"
bevy = { version = "^0.16", default-features = false, features = [
    "bevy_log",
]}
voronator = "0.2.1"

[dev-dependencies]
bevy-tnua-avian3d = "0.5.0"
bevy-tnua = "0.24.0"
bevy = { version = "0.16.1", default-features = false, features = [
    "android-game-activity",
    "animation",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_sprite_picking_backend",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "default_font",
    "hdr",
    "multi_threaded",
    "png",
    "smaa_luts",
    "sysinfo_plugin",
    "tonemapping_luts",
    "webgl2",
    "x11",

    "std",
    "async_executor",

    # optional bevy features
    "serialize",
    "wayland",
]}
bevy_egui = "0.35.1"
